ADD Refresh handler, refresh for session and jwt, customErrMessage for validation REFACTOR logging
